<resources>
    <string name="app_name">Music &amp; Fm</string>
    <string name="search">Search</string>
    <string name="your_library">Your Library</string>
    <string name="browse_all">Browse all</string>
    <string name="do_you_want_to_listen_to">Do you want to listen to?</string>
    <string name="song">Song</string>
    <string name="artists">Artists</string>
    <string name="play_what_you_love">Play what you love</string>
    <string name="search_for_artists_songs">Search for artists, songs.</string>
    <string name="song_name">Song Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="try_searching">Try searching using a different spelling or keyword.</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="chanel_name">Music &amp; Fm</string>
    <string name="songs_you_download_will_appear_here">Songs you download will appear here</string>
    <string name="library">Library</string>
    <string name="favorites">Favorites</string>
    <string name="download">Download</string>
    <string name="nothing_to_show">Nothing to show</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="downloads">Downloads</string>
    <string name="songs_you_favorites_will_appear_here">Songs you favorites will appear here</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="add_to_downloads">Add to downloads</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="remove">Remove</string>
    <string name="_0_00">0:00</string>
</resources>