<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".SongFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tbTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitle="@string/song_name"
        app:title="@string/song" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_theme_light_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbTop" />

    <ImageView
        android:id="@+id/ivSongImage"
        android:layout_width="400dp"
        android:layout_height="450dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/song_image_default"
        app:layout_constraintBottom_toTopOf="@id/flow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        tools:ignore="ImageContrastCheck" />


    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:constraint_referenced_ids="text_view_current,seek_bar,text_view_duration"
        app:flow_horizontalGap="8dp"
        app:layout_constraintBottom_toTopOf="@id/flow_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSongImage" />

    <TextView
        android:id="@+id/text_view_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/search" />

    <TextView
        android:id="@+id/text_view_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00" />


    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:constraint_referenced_ids="ivFavorite,ivPrevious,ivPlayPause,ivNext,ivDownload"
        app:flow_horizontalGap="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flow" />

    <ImageView
        android:id="@+id/ivFavorite"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/favorites"
        android:src="@drawable/md_favorite" />

    <ImageView
        android:id="@+id/ivPrevious"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/previous"
        android:src="@drawable/md_previous" />

    <ImageView
        android:id="@+id/ivPlayPause"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/play_what_you_love"
        android:src="@drawable/md_play" />

    <ImageView
        android:id="@+id/ivNext"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/next"
        android:src="@drawable/md_next" />

    <ImageView
        android:id="@+id/ivDownload"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/download"
        android:src="@drawable/md_download" />

</androidx.constraintlayout.widget.ConstraintLayout>