<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    tools:ignore="TextSizeCheck">

    <ImageView
        android:id="@+id/my_image_view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:contentDescription="@string/artists"
        android:scaleType="centerCrop"
        android:src="@drawable/notification" />

    <LinearLayout
        android:layout_marginStart="15dp"
        android:id="@+id/layoutStart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_toStartOf="@id/layoutEnd"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="2">

        <TextView
            android:textColor="@color/md_theme_light_surfaceVariant"
            android:layout_marginVertical="4dp"
            android:id="@+id/tvNotificationSongName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/song_name"
            android:textSize="18sp" />

        <TextView
            android:textColor="@color/md_theme_light_surfaceVariant"

            android:layout_marginVertical="4dp"
            android:id="@+id/tvNotificationArtistName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/artist_name"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivPrevious"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="15dp"
            android:contentDescription="@string/previous"
            android:src="@drawable/md_skip_previous"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/ivPlayPause"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/play_what_you_love"
            android:src="@drawable/md_play_circle" />

        <ImageView
            android:id="@+id/ivNext"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="15dp"
            android:contentDescription="@string/next"
            android:src="@drawable/md_skip_next" />

    </LinearLayout>
</RelativeLayout>