<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SongActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tbTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/ivSongImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/CustomItemMenu"
        app:subtitle="@string/song_name"
        app:title="@string/song" />

    <ImageView
        android:scaleType="matrix"
        android:id="@+id/ivSongImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/song"
        app:layout_constraintBottom_toTopOf="@id/flow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbTop" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:constraint_referenced_ids="tvCountDown,sliderTime,tvEndTime"
        app:flow_horizontalGap="8dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_song"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSongImage" />

    <TextView
        android:id="@+id/tvCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderTime"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/your_library"
        android:text="@string/search" />

    <TextView
        android:id="@+id/tvEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4_30" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_song"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flow"
        app:layout_constraintVertical_bias="1"
        app:menu="@menu/song_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>