<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:constraint_referenced_ids="tvCountDown,button4,tvEndTime"
        app:flow_horizontalGap="8dp"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00" />

    <com.google.android.material.slider.Slider
        android:contentDescription="@string/your_library"
        android:id="@+id/button4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/search" />

    <TextView
        android:id="@+id/tvEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4_30" />
</androidx.constraintlayout.widget.ConstraintLayout>