<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".OnSearchFragment">

    <LinearLayout
        android:id="@+id/linear_layout_result_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/md_arrow_back"
            android:visibility="gone" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/svSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconifiedByDefault="false"
            app:queryHint="@string/do_you_want_to_listen_to"
            app:searchIcon="@null" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:visibility="gone"
        android:id="@+id/nsvChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btSong"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/md_theme_dark_primaryContainer"
                android:text="@string/song"
                android:textColor="@color/md_theme_light_onPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btArtist"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_light_onPrimary"
                android:text="@string/artists"
                android:textColor="@color/md_theme_dark_primaryContainer" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPlayWhatYouLove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/play_what_you_love"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvSearchFor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/search_for_artists_songs" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvSong"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>