<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SearchFragment">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSearch"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        android:text="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.SearchView
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@id/tvSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:iconifiedByDefault="false"
        app:queryHint="@string/do_you_want_to_listen_to"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/svSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/svSearch"
        android:id="@+id/tvBrowseAll"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/browse_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="150dp"
        android:id="@+id/rcCategory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBrowseAll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>